[package]
name = "windows-envs"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(any(not(any(target_arch = "x86", target_arch = "x86_64")), target_env = "msvc"))'.dependencies]
sha2 = { version = "0.9.8", default-features = false }

[target.'cfg(all(any(target_arch = "x86", target_arch = "x86_64"), not(target_env = "msvc")))'.dependencies]
sha2 = { version = "0.9.8", default-features = false, features = ["asm"] }